<resources>
    <string name="app_name">Librapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Popular</string>
    <string name="menu_search">Search</string>
    <string name="menu_books">Borrowed books</string>

    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="register">REGISTER</string>
    <string name="loginMessage">Welcome to Librapp</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="RegisterMessage">Become a member</string>
    <string name="username">Username</string>
    <string name="useravatar">UserAvatar</string>
    <string name="log_out">Log out</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="searchBookButton">Search</string>
    <string name="title_activity_book_details">BookDetails</string>
    <!-- Strings used for fragments for navigation -->

    <string name="rent_button">Borrow book</string>
    <string name="borrowBook">Borrow book</string>
    <string name="channel_name">notificationChannelName</string>
    <string name="channel_desc">channelDescription</string>
    <string name="title_activity_rented_book_details">RentedBookDetailsActivity</string>
    <string name="reserveBook">Reserve Book</string>
    <string name="reserved_books">Reserved Books</string>
    <string name="category">Category:</string>
    <string name="Account_settings">Account settings</string>
    <string name="Notification_settings">Notification settings</string>
    <!-- Strings used for fragments for navigation -->

</resources>
