<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_reserved"

            android:title="@string/reserved_books"
            />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_storage_black_24dp"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_menu_camera"
            android:title="Scanner"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="Settings"
            />

    </group>
</menu>
