<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/Account_settings">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/Notification_settings">

        <SwitchPreferenceCompat
            app:key="bookReady"
            app:title="Book waiting in library"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="bookReminder"
            app:title="Book return reminder"
            app:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>


<!--
<SwitchPreferenceCompat
app:dependency="sync"
app:key="attachment"
app:summaryOff="@string/attachment_summary_off"
app:summaryOn="@string/attachment_summary_on"
app:title="@string/attachment_title" />-->
