<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.librapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.librapp.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_reserved"
        android:name="com.example.librapp.ui.reserverdBooks.ReservedBooksFragment"
        android:label="Reserved Books"
        tools:layout="@layout/reserved_books_fragment"/>

    <fragment
        android:id="@+id/nav_books"
        android:name="com.example.librapp.ui.books.BooksFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/nav_scanner"
        android:name="com.example.librapp.ui.scanner.ScannerFragment"
        android:label="Scanner"
        tools:layout="@layout/fragment_scanner"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.librapp.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings"/>
</navigation>